# yahoo-symbols-downloader

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.db  test_sqlite.db
.github/workflows/: build-docker.yml
config/: settings.toml  settings.yml
logs/: tasks.csv
src/yahoo_symbols/: run.py  schedule.py  settings.py  utils.py
symbol-info/: yahoo-symbols.sqlite
yahoo_symbols/: _schedule.py  constants.py  helpers.py  main.py  run.py  schedule.py  settings.py  utils.py
yahoo_symbols_downloader/: helpers.py  main.py  settings.py
