[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Volker Lorrmann", email = "volker.lorrmann@gmail.com"},
]
dependencies = [
    "pydala2 @ git+https://github.com/legout/pydala2",
    "msgspec>=0.18.4",
    "s3fs>=2023.9.2",
    "yfin @ git+https://github.com/legout/yfin",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "anyio>=3.7.1",
    "rocketry>=2.5.1",
    "polars[sqlalchemy]>=0.19.12",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "glaredb>=0.5.0",
    "jupyterlab>=4.0.7",
    "black>=23.9.1",
    "isort>=5.12.0",
    "ipython>=8.16.1",
    "lancedb>=0.3.2",
    "ruff>=0.1.3",
]
